--- a/package.json
+++ b/package.json
@@ -26,11 +26,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "chokidar": "^3.6.0",
     "dotenv": "^16.4.5",
-    "firebase": "^10.12.5",
-    "ignore": "^5.3.1",
-    "prettier": "^3.3.3"
+    "ignore": "^5.3.1"
   },
   "peerDependencies": {
     "react": "^16.8.0"
