chore: Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "description": "The Fun No-Code AI",
   "author": "Daniel Murawsky",
-  "homepage": "https://soilai.dev/",
+  "homepage": "https://soilai.dev",
   "repository": {
     "type": "git",
     "url": "https://github.com/dmurawsky/soilai.git"
