--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "printWidth": 120
   },
   "devDependencies": {
+    "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "typescript": "^5.5.4"
   }
