--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "debug": "^4.3.6",
     "dotenv": "^16.4.5",
     "ignore": "^5.3.1"
   },
@@ -36,6 +37,7 @@
     "printWidth": 120
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "typescript": "^5.5.4"
