--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && tsc && yarn bundle",
     "patch": "npm version patch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node ./src/bin/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "npx rollup -c"
   },
   "dependencies": {
     "debug": "^4.3.6",
@@ -40,6 +42,10 @@
     "@types/debug": "^4.1.12",
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
+    "rollup": "^4.20.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
 }
