--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "./src/dom/bundle.ts"]
 }
