chore: Update package description to "Optimizing development for designers"

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "soilai",
   "version": "0.0.13",
-  "description": "The Fun No-Code AI",
+  "description": "Optimizing development for designers.",
   "author": "Daniel Murawsky",
   "homepage": "https://soilai.dev",
   "repository": {
