--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "soilai",
   "version": "0.0.18",
-  "description": "Optimizing development for designers.",
+  "description": "Optimizing Next.js development",
   "author": "Daniel Murawsky",
   "homepage": "https://soilai.dev",
   "repository": {
