--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "debug": "^4.3.6",
     "dotenv": "^16.4.5",
-    "ignore": "^5.3.1"
+    "ignore": "^5.3.1",
+    "uuid": "^10.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.0"
@@ -42,6 +43,7 @@
     "@types/debug": "^4.1.12",
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
+    "@types/uuid": "^10.0.0",
     "rollup": "^4.20.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
